# pawian-tools

./: .coveragerc  .cspell.json  .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .gitpod.yml  .mypy.ini  .pre-commit-config.yaml  .pydocstyle  .pylintrc  .readthedocs.yml  CONTRIBUTING.md  LICENSE  README.md  cspell.json  environment.yml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.constraints/: py3.10.txt  py3.11.txt  py3.12.txt  py3.6.txt  py3.7.txt  py3.8.txt  py3.9.txt
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci-style.yml  ci.yml  gh-pages.yml  linkcheck.yml  pr-linting.yml  requirements-cron.yml  requirements-pr.yml
Notebooks/: DataFitCompare.ipynb  DrawContributions.ipynb  Pawianplotter.ipynb  StatisticalTools.ipynb  extractScatteringData.ipynb
boostcfg/: __init__.py  lineparser.py
boostcfg/test/: example.cfg  test_boostcfg.py  test_lineparser.py
docs/: .gitignore  Makefile  README.md  api.md  api.rst  conf.py  develop.md  index.md  index.rst  install.md  usage.md  usage.rst
docs/usage/: ASCII_Data.ipynb  QA_Histograms.ipynb  ascii.ipynb  qa.ipynb
examples/: ASCII_Data.ipynb  QA_Histograms.ipynb
pawian/: __init__.py  latex.py
pawian/data/: __init__.py
pawian/data/test/: test_pandas_accessor.py  test_read_ascii.py  test_read_data.py  test_read_pawian_hists.py  test_write_ascii.py  test_write_data.py
pawian/latex/: __init__.py
pawian/latex/test/: test_latex.py
pawian/qa/: __init__.py
pawian/qa/test/: pawianHists_ROOT5_SigmaKp.root  pawianHists_epem.root  test_pawian_qa.py
src/boostcfg/: __init__.py  lineparser.py
src/pawian/: __init__.py  data.py  latex.py  qa.py
src/pawian/samples/: pawianHists_ROOT6_DDpi.root
tests/boostcfg/: example.cfg  test_boostcfg.py  test_lineparser.py
tests/pawian/: test_latex.py  test_qa.py
tests/pawian/data/: test_pandas_accessor.py  test_read_ascii.py  test_read_pawian_hists.py  test_write_ascii.py
