[metadata]
name = pawian-tools
maintainer_email = redeboer@ep1.rub.de
long_description = file: README.md
long_description_content_type = text/markdown
# URLS are shown in reverse order on PyPI
project_urls =
    Tracker = https://github.com/redeboer/PawianTools/issues
    Changelog = https://github.com/redeboer/PawianTools/releases
    Documentation = http://redeboer.github.io/PawianTools
    Source = https://github.com/redeboer/PawianTools
license = GPLv3 or later
keywords =
    HEP
    PWA
    amplitude analysis
    partial wave analysis
    particle physics
    particles
    physics
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Typing :: Typed

[options]
python_requires = >=3.6, <3.11
setup_requires =
    setuptools_scm
install_requires =
    awkward >=1
    matplotlib
    numpy
    pandas
    uproot >=4
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.package_data]
pawian =
    samples/*

[options.extras_require]
doc =
    importlib-metadata; python_version <"3.8.0"
    ipywidgets
    jupyter
    myst-nb
    pydeps
    Sphinx >=3
    Sphinx <4.4; python_version <"3.8.0"  # https://github.com/ComPWA/qrules/runs/4833302679
    sphinx-book-theme
    sphinx-codeautolink[ipython]
    sphinx-copybutton
    sphinx-thebe
    sphinx-togglebutton
format =
    black
    isort
    nbstripout
flake8 =
    flake8 >=4  # extend-select
    flake8-blind-except
    flake8-bugbear
    flake8-builtins
    flake8-comprehensions
    flake8-pytest-style
    flake8-rst-docstrings
    flake8-type-ignore; python_version >="3.8.0"
    flake8-use-fstring
    pep8-naming
    virtualenv <20.16; python_version <"3.8.0"  # https://github.com/redeboer/PawianTools/runs/8127523184?check_suite_focus=true#step:3:70
mypy =
    mypy >=0.730  # error code support
    types-setuptools
lint =
    %(flake8)s
    %(mypy)s
    pydocstyle
    pylint >=2.5  # good-names-rgxs
test =
    pytest
    pytest-cov
    pytest-profiling
    pytest-xdist
precommit =
    %(format)s
    %(lint)s
    %(test)s
    pre-commit >=2.9.2  # for black
tox =
    %(precommit)s
    sphinx-autobuild
    tox
tools =
    jupyterlab
    jupyterlab-code-formatter
dev =
    %(doc)s
    %(tools)s
    %(tox)s
