[metadata]
name = pawian-tools
description = Python helper tools for the Pawian framework
author = Common Partial Wave Analysis
author_email = compwa-admin@ep1.rub.de
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Tracker = https://github.com/redeboer/PawianTools/issues
    Changelog = https://github.com/redeboer/PawianTools/releases
    Documentation = http://redeboer.github.io/PawianTools
    Source = https://github.com/redeboer/PawianTools
license = GPLv3 or later
keywords =
    HEP
    PWA
    amplitude analysis
    partial wave analysis
    particle physics
    particles
    physics
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Typing :: Typed

[options]
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    awkward >=1
    matplotlib
    numpy
    pandas
    uproot >=4
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.package_data]
pawian =
    samples/*

[options.extras_require]
doc =
    importlib-metadata; python_version <"3.8.0"
    ipywidgets
    myst-nb
    pydeps
    Sphinx >=3
    Sphinx <4.4; python_version <"3.8.0"  # https://github.com/ComPWA/qrules/runs/4833302679
    sphinx-book-theme
    sphinx-codeautolink[ipython]
    sphinx-copybutton
    sphinx-thebe
    sphinx-togglebutton
format =
    black
mypy =
    mypy >=0.730  # error code support
    types-setuptools
lint =
    %(mypy)s
    ruff; python_version >="3.7.0"
test =
    pytest
    pytest-cov
    pytest-profiling
    pytest-xdist
sty =
    %(format)s
    %(lint)s
    %(test)s  # for pytest type hints
    pre-commit >=2.9.2  # for black
jupyter =
    jupyterlab
    jupyterlab-code-formatter
    jupyterlab-lsp
    jupyterlab-myst; python_version >="3.7.0"
    python-lsp-server[rope]
    ypy-websocket <0.8.3; python_version >="3.7.0"  # https://github.com/redeboer/PawianTools/actions/runs/4350341991/jobs/7600958375#step:3:78
dev =
    %(doc)s
    %(jupyter)s
    %(sty)s
    %(test)s
    sphinx-autobuild
    sphinx-autobuild
    tox <4; python_version <"3.8.0"  # https://github.com/redeboer/PawianTools/actions/runs/3861498991/jobs/6582508970#step:3:91
    tox >=1.9  # for skip_install, use_develop
    virtualenv <20.22.0; python_version <"3.8.0"  # importlib-metadata conflict
    virtualenv!=20.16.*,!=20.17.*  # https://github.com/redeboer/PawianTools/actions/runs/4359491077/jobs/7621340858#step:3:76
